--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ yarn-error.log
 .byebug_history
 .env*
 .env*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
